fixed the connection issue bw index.html and index.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>NASA's APOD with Server</title>
 </head>
 <body>
-    <script src="./static/index.js"> //there is currently a problem connecting to the javascript file</script>
+    <script src="/static/index.js"></script>
 </body>
 </html>
