modified route path

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>NASA's APOD with Server</title>
 </head>
 <body>
-    <script src="/static/index.js"></script>
+    <script src="/publicpath/index.js"></script>
 </body>
 </html>
