added button to go to about page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <script src="/publicpath/index.js"></script>
+    <form action="/aboutpage">
+        <input type="submit" value="Go to about page"/>
+    </form>
 </body>
 </html>
